--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <!DOCTYPE html>
 <html>
@@ -101,7 +101,7 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js'></script>
-<script src='js/bootstrap.min.js'></script>
+<script src='{% static 'https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js' %}'></script>
+<script src='{% static 'js/bootstrap.min.js' %}'></script>
 </body>
 </html>
